[tool.poetry]
name = "sawasdee-dagster"
version = "0.1.0"
description = ""
authors = ["atbee <athibet.pi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.13.9"
dagit = "^0.13.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
